Refactor DefaultNotificationRecipientIndex for better readability
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>