@@ -20,7 +20,6 @@
 package org.xwiki.notifications.filters.internal.recipient;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
@@ -46,22 +45,34 @@ import org.xwiki.notifications.filters.internal.user.EventUserFilter;
  */
 public class DefaultNotificationRecipientIndex implements NotificationRecipientIndex
 {
+    /**
+     * Synthetic event type bucket used for preferences that are not restricted to specific event types.
+     */
     static final String ALL_EVENT_TYPES = "__all__";
 
     private final EntityReferenceSerializer<String> entityReferenceSerializer;
 
     private final DocumentReferenceResolver<String> documentReferenceResolver;
 
+    /**
+     * Stores the indexed representation of each preference so updates and removals can undo the previous indexing
+     * without rebuilding the whole structure.
+     */
     private final Map<String, IndexedPreference> indexedPreferences = new HashMap<>();
 
-    private final Map<String, Set<String>> indexedPreferencesByOwner = new HashMap<>();
-
+    /**
+     * Location-based indexes are keyed by location first and by event type second. Page-only entries match the exact
+     * page, page entries match a page or one of its ancestor spaces, and wiki entries match the wiki id.
+     */
     private final Map<String, Map<String, Set<DocumentReference>>> pageOnlyIndex = new HashMap<>();
 
     private final Map<String, Map<String, Set<DocumentReference>>> pageIndex = new HashMap<>();
 
     private final Map<String, Map<String, Set<DocumentReference>>> wikiIndex = new HashMap<>();
 
+    /**
+     * Followed-user preferences match all event types, so they only need to be keyed by the serialized followed user.
+     */
     private final Map<String, Set<DocumentReference>> followedUserIndex = new HashMap<>();
 
     /**
@@ -83,15 +94,13 @@ public class DefaultNotificationRecipientIndex implements NotificationRecipientI
 
         removePreference(preference.getId());
 
-        IndexedPreference indexedPreference = IndexedPreference.create(preference, this.documentReferenceResolver);
+        IndexedPreference indexedPreference = createIndexedPreference(preference);
         if (indexedPreference == null) {
             return;
         }
 
-        this.indexedPreferences.put(indexedPreference.getPreferenceId(), indexedPreference);
-        this.indexedPreferencesByOwner.computeIfAbsent(indexedPreference.getOwnerKey(), ignored -> new HashSet<>())
-            .add(indexedPreference.getPreferenceId());
-        indexedPreference.addToIndexes(this.pageOnlyIndex, this.pageIndex, this.wikiIndex, this.followedUserIndex);
+        this.indexedPreferences.put(indexedPreference.preferenceId(), indexedPreference);
+        addToIndexes(indexedPreference);
     }
 
     synchronized void remove(String preferenceId)
@@ -103,13 +112,6 @@ public class DefaultNotificationRecipientIndex implements NotificationRecipientI
         removePreference(preferenceId);
     }
 
-    synchronized void replaceOwner(String owner,
-        Collection<? extends IndexableNotificationFilterPreference> preferences)
-    {
-        removeOwnerPreferences(owner);
-        preferences.forEach(this::addOrUpdate);
-    }
-
     @Override
     public synchronized Set<DocumentReference> findCandidates(Event event)
     {
@@ -118,13 +120,7 @@ public class DefaultNotificationRecipientIndex implements NotificationRecipientI
 
         DocumentReference documentReference = event.getDocument();
         if (documentReference != null) {
-            String serializedDocumentReference = this.entityReferenceSerializer.serialize(documentReference);
-            addCandidates(this.pageOnlyIndex, serializedDocumentReference, eventType, candidateUsers);
-            addCandidates(this.pageIndex, serializedDocumentReference, eventType, candidateUsers);
-
-            for (String spaceReference : getSpaceReferences(documentReference)) {
-                addCandidates(this.pageIndex, spaceReference, eventType, candidateUsers);
-            }
+            addDocumentCandidates(documentReference, eventType, candidateUsers);
         }
 
         if (event.getWiki() != null) {
@@ -132,23 +128,10 @@ public class DefaultNotificationRecipientIndex implements NotificationRecipientI
         }
 
         if (event.getUser() != null) {
-            candidateUsers.addAll(this.followedUserIndex.getOrDefault(
-                this.entityReferenceSerializer.serialize(event.getUser()), Collections.emptySet()));
+            addFollowedUserCandidates(event.getUser(), candidateUsers);
         }
 
         return candidateUsers;
-    }
-
-    private void removeOwnerPreferences(String owner)
-    {
-        Set<String> preferenceIds = this.indexedPreferencesByOwner.get(owner);
-        if (preferenceIds == null || preferenceIds.isEmpty()) {
-            return;
-        }
-
-        for (String preferenceId : Set.copyOf(preferenceIds)) {
-            removePreference(preferenceId);
-        }
     }
 
     private void removePreference(String preferenceId)
@@ -158,14 +141,141 @@ public class DefaultNotificationRecipientIndex implements NotificationRecipientI
             return;
         }
 
-        indexedPreference.removeFromIndexes(this.pageOnlyIndex, this.pageIndex, this.wikiIndex, this.followedUserIndex);
+        removeFromIndexes(indexedPreference);
+    }
 
-        Set<String> ownerPreferences = this.indexedPreferencesByOwner.get(indexedPreference.getOwnerKey());
-        if (ownerPreferences != null) {
-            ownerPreferences.remove(preferenceId);
-            if (ownerPreferences.isEmpty()) {
-                this.indexedPreferencesByOwner.remove(indexedPreference.getOwnerKey());
+    private IndexedPreference createIndexedPreference(IndexableNotificationFilterPreference preference)
+    {
+        if (!preference.isEnabled() || preference.getFilterType() != NotificationFilterType.INCLUSIVE
+            || StringUtils.isBlank(preference.getId())) {
+            return null;
+        }
+
+        DocumentReference owner = resolveOwner(preference);
+        if (owner == null) {
+            return null;
+        }
+
+        if (ScopeNotificationFilter.FILTER_NAME.equals(preference.getFilterName())) {
+            return createScopePreference(preference, owner);
+        }
+
+        if (EventUserFilter.FILTER_NAME.equals(preference.getFilterName())
+            && StringUtils.isNotBlank(preference.getUser())) {
+            return new IndexedPreference(preference.getId(), owner, IndexedPreferenceType.FOLLOWED_USER,
+                preference.getUser(), Set.of(ALL_EVENT_TYPES));
+        }
+
+        return null;
+    }
+
+    private DocumentReference resolveOwner(IndexableNotificationFilterPreference preference)
+    {
+        String owner = preference.getOwner();
+        if (StringUtils.isBlank(owner) || !StringUtils.contains(owner, ':')) {
+            return null;
+        }
+        return this.documentReferenceResolver.resolve(owner);
+    }
+
+    private IndexedPreference createScopePreference(IndexableNotificationFilterPreference preference,
+        DocumentReference owner)
+    {
+        IndexedPreferenceType indexedPreferenceType = null;
+        String key = null;
+
+        if (StringUtils.isNotBlank(preference.getPageOnly())) {
+            indexedPreferenceType = IndexedPreferenceType.PAGE_ONLY;
+            key = preference.getPageOnly();
+        } else if (StringUtils.isNotBlank(preference.getPage())) {
+            indexedPreferenceType = IndexedPreferenceType.PAGE;
+            key = preference.getPage();
+        } else if (StringUtils.isNotBlank(preference.getWiki())) {
+            indexedPreferenceType = IndexedPreferenceType.WIKI;
+            key = preference.getWiki();
+        }
+
+        if (indexedPreferenceType == null) {
+            return null;
+        }
+
+        return new IndexedPreference(preference.getId(), owner, indexedPreferenceType, key, getIndexedEventTypes(
+            preference));
+    }
+
+    private void addToIndexes(IndexedPreference indexedPreference)
+    {
+        if (indexedPreference.type() == IndexedPreferenceType.FOLLOWED_USER) {
+            this.followedUserIndex.computeIfAbsent(indexedPreference.key(), ignored -> new HashSet<>())
+                .add(indexedPreference.owner());
+            return;
+        }
+
+        Map<String, Set<DocumentReference>> eventTypeIndex =
+            getLocationIndex(indexedPreference.type()).computeIfAbsent(indexedPreference.key(),
+                ignored -> new HashMap<>());
+        for (String eventType : indexedPreference.eventTypes()) {
+            eventTypeIndex.computeIfAbsent(eventType, ignored -> new HashSet<>()).add(indexedPreference.owner());
+        }
+    }
+
+    private void removeFromIndexes(IndexedPreference indexedPreference)
+    {
+        if (indexedPreference.type() == IndexedPreferenceType.FOLLOWED_USER) {
+            Set<DocumentReference> owners = this.followedUserIndex.get(indexedPreference.key());
+            if (owners != null) {
+                owners.remove(indexedPreference.owner());
+                if (owners.isEmpty()) {
+                    this.followedUserIndex.remove(indexedPreference.key());
+                }
             }
+            return;
+        }
+
+        Map<String, Map<String, Set<DocumentReference>>> index = getLocationIndex(indexedPreference.type());
+        Map<String, Set<DocumentReference>> eventTypeIndex = index.get(indexedPreference.key());
+        if (eventTypeIndex == null) {
+            return;
+        }
+
+        for (String eventType : indexedPreference.eventTypes()) {
+            Set<DocumentReference> owners = eventTypeIndex.get(eventType);
+            if (owners != null) {
+                owners.remove(indexedPreference.owner());
+                if (owners.isEmpty()) {
+                    eventTypeIndex.remove(eventType);
+                }
+            }
+        }
+
+        if (eventTypeIndex.isEmpty()) {
+            index.remove(indexedPreference.key());
+        }
+    }
+
+    private Map<String, Map<String, Set<DocumentReference>>> getLocationIndex(IndexedPreferenceType type)
+    {
+        return switch (type) {
+            case PAGE_ONLY -> this.pageOnlyIndex;
+            case PAGE -> this.pageIndex;
+            case WIKI -> this.wikiIndex;
+            case FOLLOWED_USER ->
+                throw new IllegalStateException(String.format("Unsupported location index type [%s].", type));
+        };
+    }
+
+    private void addDocumentCandidates(DocumentReference documentReference, String eventType,
+        Set<DocumentReference> candidateUsers)
+    {
+        String serializedDocumentReference = serialize(documentReference);
+
+        // Exact page watchers are distinct from page/space watchers because they should not match ancestor spaces.
+        addCandidates(this.pageOnlyIndex, serializedDocumentReference, eventType, candidateUsers);
+        addCandidates(this.pageIndex, serializedDocumentReference, eventType, candidateUsers);
+
+        // Page-scope preferences also match the spaces containing the modified page.
+        for (String spaceReference : getAncestorSpaceReferences(documentReference)) {
+            addCandidates(this.pageIndex, spaceReference, eventType, candidateUsers);
         }
     }
 
@@ -190,198 +300,44 @@ public class DefaultNotificationRecipientIndex implements NotificationRecipientI
         }
     }
 
-    private Set<String> getSpaceReferences(DocumentReference documentReference)
+    private void addFollowedUserCandidates(DocumentReference user, Set<DocumentReference> collector)
+    {
+        collector.addAll(this.followedUserIndex.getOrDefault(serialize(user), Set.of()));
+    }
+
+    private String serialize(EntityReference reference)
+    {
+        return this.entityReferenceSerializer.serialize(reference);
+    }
+
+    private Set<String> getAncestorSpaceReferences(DocumentReference documentReference)
     {
         Set<String> result = new LinkedHashSet<>();
         EntityReference current = documentReference.getParent();
         while (current != null && current.getType() == EntityType.SPACE) {
-            result.add(this.entityReferenceSerializer.serialize(current));
+            result.add(serialize(current));
             current = current.getParent();
         }
         return result;
     }
 
-    private static final class IndexedPreference
+    private Set<String> getIndexedEventTypes(IndexableNotificationFilterPreference preference)
     {
-        private final String preferenceId;
-
-        private final String ownerKey;
-
-        private final DocumentReference owner;
-
-        private final IndexedPreferenceType type;
-
-        private final String key;
-
-        private final Set<String> eventTypes;
-
-        private IndexedPreference(String preferenceId, String ownerKey, DocumentReference owner,
-            IndexedPreferenceType type,
-            String key, Set<String> eventTypes)
-        {
-            this.preferenceId = preferenceId;
-            this.ownerKey = ownerKey;
-            this.owner = owner;
-            this.type = type;
-            this.key = key;
-            this.eventTypes = eventTypes;
+        if (preference.getEventTypes().isEmpty()) {
+            return Set.of(ALL_EVENT_TYPES);
         }
+        return new HashSet<>(preference.getEventTypes());
+    }
 
-        private static IndexedPreference create(IndexableNotificationFilterPreference preference,
-            DocumentReferenceResolver<String> documentReferenceResolver)
+    /**
+     * Immutable description of a preference once translated to the keys used by the in-memory indexes.
+     */
+    private record IndexedPreference(String preferenceId, DocumentReference owner, IndexedPreferenceType type,
+        String key, Set<String> eventTypes)
+    {
+        private IndexedPreference
         {
-            if (!preference.isEnabled() || preference.getFilterType() != NotificationFilterType.INCLUSIVE
-                || StringUtils.isBlank(preference.getId())) {
-                return null;
-            }
-
-            DocumentReference owner = resolveOwner(preference, documentReferenceResolver);
-            if (owner == null) {
-                return null;
-            }
-
-            if (ScopeNotificationFilter.FILTER_NAME.equals(preference.getFilterName())) {
-                return createScopePreference(preference, owner);
-            }
-
-            if (EventUserFilter.FILTER_NAME.equals(preference.getFilterName())
-                && StringUtils.isNotBlank(preference.getUser())) {
-                return new IndexedPreference(preference.getId(), preference.getOwner(), owner,
-                    IndexedPreferenceType.FOLLOWED_USER, preference.getUser(), Collections.singleton(ALL_EVENT_TYPES));
-            }
-
-            return null;
-        }
-
-        private static DocumentReference resolveOwner(IndexableNotificationFilterPreference preference,
-            DocumentReferenceResolver<String> documentReferenceResolver)
-        {
-            String owner = preference.getOwner();
-            if (StringUtils.isBlank(owner) || !StringUtils.contains(owner, ':')) {
-                return null;
-            }
-            return documentReferenceResolver.resolve(owner);
-        }
-
-        private static IndexedPreference createScopePreference(IndexableNotificationFilterPreference preference,
-            DocumentReference owner)
-        {
-            IndexedPreferenceType indexedPreferenceType = null;
-            String key = null;
-
-            if (StringUtils.isNotBlank(preference.getPageOnly())) {
-                indexedPreferenceType = IndexedPreferenceType.PAGE_ONLY;
-                key = preference.getPageOnly();
-            } else if (StringUtils.isNotBlank(preference.getPage())) {
-                indexedPreferenceType = IndexedPreferenceType.PAGE;
-                key = preference.getPage();
-            } else if (StringUtils.isNotBlank(preference.getWiki())) {
-                indexedPreferenceType = IndexedPreferenceType.WIKI;
-                key = preference.getWiki();
-            }
-
-            if (indexedPreferenceType == null) {
-                return null;
-            }
-
-            return new IndexedPreference(preference.getId(), preference.getOwner(), owner,
-                indexedPreferenceType, key, getEventTypeKeys(preference));
-        }
-
-        private String getPreferenceId()
-        {
-            return this.preferenceId;
-        }
-
-        private String getOwnerKey()
-        {
-            return this.ownerKey;
-        }
-
-        private void addToIndexes(Map<String, Map<String, Set<DocumentReference>>> pageOnlyIndex,
-            Map<String, Map<String, Set<DocumentReference>>> pageIndex,
-            Map<String, Map<String, Set<DocumentReference>>> wikiIndex,
-            Map<String, Set<DocumentReference>> followedUserIndex)
-        {
-            if (this.type == IndexedPreferenceType.FOLLOWED_USER) {
-                followedUserIndex.computeIfAbsent(this.key, ignored -> new HashSet<>()).add(this.owner);
-                return;
-            }
-
-            Map<String, Map<String, Set<DocumentReference>>> index = getIndex(pageOnlyIndex, pageIndex, wikiIndex);
-            Map<String, Set<DocumentReference>> eventTypeIndex = index.computeIfAbsent(this.key,
-                ignored -> new HashMap<>());
-            for (String eventType : this.eventTypes) {
-                eventTypeIndex.computeIfAbsent(eventType, ignored -> new HashSet<>()).add(this.owner);
-            }
-        }
-
-        private void removeFromIndexes(Map<String, Map<String, Set<DocumentReference>>> pageOnlyIndex,
-            Map<String, Map<String, Set<DocumentReference>>> pageIndex,
-            Map<String, Map<String, Set<DocumentReference>>> wikiIndex,
-            Map<String, Set<DocumentReference>> followedUserIndex)
-        {
-            if (this.type == IndexedPreferenceType.FOLLOWED_USER) {
-                removeFromFollowedUserIndex(followedUserIndex);
-                return;
-            }
-
-            removeFromLocationIndex(getIndex(pageOnlyIndex, pageIndex, wikiIndex));
-        }
-
-        private Map<String, Map<String, Set<DocumentReference>>> getIndex(
-            Map<String, Map<String, Set<DocumentReference>>> pageOnlyIndex,
-            Map<String, Map<String, Set<DocumentReference>>> pageIndex,
-            Map<String, Map<String, Set<DocumentReference>>> wikiIndex)
-        {
-            return switch (this.type) {
-                case PAGE_ONLY -> pageOnlyIndex;
-                case PAGE -> pageIndex;
-                case WIKI -> wikiIndex;
-                case FOLLOWED_USER ->
-                    throw new IllegalStateException(String.format("Unsupported location index type [%s].", this.type));
-            };
-        }
-
-        private void removeFromLocationIndex(Map<String, Map<String, Set<DocumentReference>>> index)
-        {
-            Map<String, Set<DocumentReference>> eventTypeIndex = index.get(this.key);
-            if (eventTypeIndex == null) {
-                return;
-            }
-
-            for (String eventType : this.eventTypes) {
-                Set<DocumentReference> owners = eventTypeIndex.get(eventType);
-                if (owners != null) {
-                    owners.remove(this.owner);
-                    if (owners.isEmpty()) {
-                        eventTypeIndex.remove(eventType);
-                    }
-                }
-            }
-
-            if (eventTypeIndex.isEmpty()) {
-                index.remove(this.key);
-            }
-        }
-
-        private void removeFromFollowedUserIndex(Map<String, Set<DocumentReference>> followedUserIndex)
-        {
-            Set<DocumentReference> owners = followedUserIndex.get(this.key);
-            if (owners != null) {
-                owners.remove(this.owner);
-                if (owners.isEmpty()) {
-                    followedUserIndex.remove(this.key);
-                }
-            }
-        }
-
-        private static Set<String> getEventTypeKeys(IndexableNotificationFilterPreference preference)
-        {
-            if (preference.getEventTypes().isEmpty()) {
-                return Collections.singleton(ALL_EVENT_TYPES);
-            }
-            return new HashSet<>(preference.getEventTypes());
+            eventTypes = Set.copyOf(eventTypes);
         }
     }
 
